src/objects/tdc_tsw__Question__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__First_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Object__c</fullName>
        <inlineHelpText>If you need to merge fields, then select an object to start the survey.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question_Label__c</fullName>
        <inlineHelpText>Give a label to your question</inlineHelpText>
        <label>Question Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question__c</fullName>
        <inlineHelpText>Create a question for the survey. Add merge by including the formula in the text.</inlineHelpText>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>tdc_tsw__Survey__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>